# bluewind

./: ... (at the loader function)  ... (previous code stays the same until the .values part)  .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  Connect to parent  Dockerfile  Old  Please only submit bug reports when using the officially supported version.  README.md  Skip server function check if this is a setup route  Special case: if it's the requests table insert, let it through without overrides  TODO  admin_autoregister.py  app.json  application.json  cassette.json  cassette.txt  ci.py  ci_utils.py  cli.py  components.json  config.json  daphne_config.py  deploy.py  deploy.sh  deploy_push.py  deploy_stack.py  dev.sh  docker-compose.yml  drizzle.config.ts  env_list.json  export-vscode-settings.sh  fly.toml  get_application.py  gunicorn_config.py  image_id.txt  in load-navigation-data.server.ts, update the createNavigationTrees call  last_deployment.json  (+35 more)
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.do/: deploy.template.yaml
.github/: FUNDING.yml
In your action-calls/: route.tsx, update the layout:
action_runs/: apps.py  models.py
actions/: models.py
admin_autoregister/: admin_inheritance.py  append_dockerignore.py  apps.py  autopep8.py  autoregister_forms.py  autoregister_models.py  check_models.py  check_unique_together.py  clean_dockerignore.py  forbid_imports.py  model_inheritance.py  models.py  register_actions.py  register_flows.py  ruff.py  ruff_deal_breakers.py  superuser.py  whitelist.py
admin_events/: apps.py  models.py
api_calls/: apps.py  models.py
api_providers/: apps.py  models.py
apollo_company_searches/: admin.py  apps.py  models.py
apollo_people_search/: apps.py  models.py
app/: entry.client.tsx  entry.server.tsx  hello.server.ts  package-lock.json  package.json  root-error-boundary.tsx  root.tsx  tailwind.css
app_logs/: admin.py  apps.py  models.py
approvals/: apps.py  models.py
apps/: models.py
auth/: views.py
auto_factory_model/: apps.py
auto_tests/: apps.py  models.py  tests.py
backend/: .gitignore  Dockerfile  TODO  fly.toml  install.sh  manage.py  pyproject.toml  setup_project.py
backend/auth/: views.py
backend/auto_tests/: models.py  tests.py
backend/base_app_config/: apps.py
backend/base_model/: models.py
backend/base_model_admin/: admin.py  apps.py
backend/bluewind/: middleware.py  settings.py  settings_test.py  urls.py  views.py
backend/bluewind/management/commands/: setup_database.py
backend/chat_messages/: admin.py  models.py
backend/chat_messages/migrations/: 0001_initial.py
backend/db_graph/: admin.py  models.py
backend/db_graph/migrations/: 0001_initial.py
backend/django/: pyproject.toml
backend/django-user-sessions/user_sessions/: admin.py
backend/django/django/contrib/admin/: actions.py  helpers.py  models.py  options.py  sites.py  utils.py  widgets.py
backend/django/django/contrib/admin/templates/admin/: 500.html  app_index.html  base.html  base_site.html  change_form.html  delete_selected_confirmation.html  object_history.html  submit_line.html
backend/django/django/contrib/admin/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
backend/django/django/contrib/admindocs/templates/admin_doc/: template_filter_index.html  template_tag_index.html
backend/django/django/contrib/auth/: admin.py
backend/features/: environment.py  superuser_login.feature
backend/features/steps/: superuser_login_steps.py
backend/leads/: admin.py  models.py
backend/leads/migrations/: 0001_initial.py
backend/session_extended/: apps.py  models.py
backend/tenants/: middleware.py  models.py
backend/tenants/migrations/: 0001_initial.py
backend/workspaces/: admin.py  middleware.py  models.py
backend/workspaces/migrations/: 0001_initial.py  0002_alter_workspace_table_workspaceuser_workspace_users.py
backend/workspaces/templates/admin/: base_site.html
base64_utils/: apps.py  before_create.py  before_save.py  models.py
base_admin/: admin.py  apps.py
base_app_config/: apps.py
base_model/: apps.py  models.py
base_model_admin/: InWorkspace.py  admin.py  models.py
bluewind/: admin_autoregister.py  admin_site.py  allauth_adapter.py  allauth_redirect.py  asgi.py  auto_api.py  context_variables.py  custom_admin_site.py  custom_exception.py  do_not_log.py  env.py  health_check.py  log_filters.py  logging_config.py  middleware.py  pre_setup.py  push_logs.py  request_id_middleware.py  (+14 more)
deploy/: app.py  cdk.context.json  deploy.sh  django_fargate_cdk_stack.py  pyproject.toml  simple_ecs_ec2_stack.py
deploy/app/: app.py
django/: pyproject.toml
django-user-sessions/: pyproject.toml
django-user-sessions/docs/: conf.py
django-user-sessions/example/: middleware.py  settings.py  urls.py
django-user-sessions/tests/: settings.py  test_admin.py  test_client.py  test_commands.py  test_middleware.py  test_models.py  test_sessionstore.py  test_template_filters.py  test_views.py  urls.py  utils.py
django-user-sessions/user_sessions/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
django-user-sessions/user_sessions/backends/: db.py
django-user-sessions/user_sessions/management/commands/: migratesessions.py
django-user-sessions/user_sessions/migrations/: 0001_initial.py  0002_initial.py
django-user-sessions/user_sessions/templatetags/: user_sessions.py
django/contrib/admin/templates/admin/: workspaces.html
django/django/contrib/admin/: actions.py  models.py
django/django/contrib/admin/templates/admin/: change_list.html  delete_confirmation.html  invalid_setup.html
django/django/contrib/admin/templates/admin/auth/user/: change_password.html
django/django/contrib/admin/templates/admin/edit_inline/: stacked.html  tabular.html
django/django/contrib/admin/templates/registration/: password_change_form.html  password_reset_complete.html
django/django/contrib/admin/views/: main.py
django/tests/admin_views/: admin.py
(+2217 files in other folders)
