[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Bluewind"
version = "0.0.4"
description = "A high-level Python web framework that encourages rapid development and clean, pragmatic design."
authors = [ "Django Software Foundation <foundation@djangoproject.com>",]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = true

[tool.black]
target-version = [ "py310",]
force-exclude = "tests/test_runner_apps/tagged/tests_syntax_error.py"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = "django"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.8.1"
sqlparse = "^0.3.1"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"
behave-django = "^1.4.0"
psycopg2 = "^2.9.9"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
pydeps = "^1.12.20"
python3-openid = "^3.2.0"
requests = "^2.32.3"
pyjwt = "^2.9.0"
cryptography = "^43.0.0"
requests-oauthlib = "^2.0.0"
factory-boy = "^3.3.0"
django-debug-toolbar = "^4.4.6"
model-mommy = "^2.0.0"
dj-database-url = "^2.2.0"
django = "^5.1"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.140.0"
django-unfold = "^0.35.0"
botocore = "^1.35.2"
boto3 = "^1.35.2"
aiohttp = "^3.10.5"
django-admin-sso = "^5.2.0"

[tool.poetry.extras]
argon2 = [ "argon2-cffi",]
bcrypt = [ "bcrypt",]

[tool.poetry.scripts]
django-admin = "django.core.management:execute_from_command_line"

[tool.poetry.dependencies.django-user-sessions]
path = "django-user-sessions"
develop = true

[tool.poetry.dependencies.tzdata]
version = "*"
markers = "sys_platform == 'win32'"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pygraphviz = "^1.13"
