[tool.poetry]
name = "bluewind"
version = "0.1.0"
description = ""
authors = ["Merwane Hamadi <merwanehamadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
gunicorn = "^22.0.0"
django-environ = "^0.11.2"
whitenoise = "^6.7.0"
pygraphviz = "^1.13"
python3-openid = "^3.2.0"
django-allauth = {extras = ["socialaccount"], version = "^0.63.6"}
pydeps = "^1.12.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
