[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-user-sessions"
version = "0.1.0"
description = "Django sessions with a foreign key to the user"
authors = ["Bouke Haarsma <bouke@haarsma.eu>"]
readme = "README.rst"
license = "MIT"
packages = [{include = "user_sessions"}]

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.2"